--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo center">Contact Management System</a>
+            <a href="#" class="brand-logo center">POOP: Php Object Oriented Programming</a>
         </div>
     </nav>
     <div class="row">
